--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Libre+Franklin&display=swap');
 * {
   font-size: 2rem;
 }
@@ -6,6 +7,7 @@ body {
   min-width: 100%;
   min-height: 100vh;
   overflow: hidden;
+  font-family: 'Libre Franklin', serif;
 }
 #header{
     text-align: center;
@@ -13,6 +15,7 @@ body {
     font-size: 2rem;
     color: white;
     background-color: gray;
+    font-family: 'Libre Baskerville', serif;
 }
 .table {
   position: absolute;
@@ -59,6 +62,7 @@ body {
     padding: 0.25rem .25rem;
     border: 2px solid;
     border-radius: 0px;
+    font-family: 'Libre Baskerville', serif;
 }
 .btn-outline-secondary:not(:disabled):not(.disabled):active:focus,.btn-outline-secondary:focus{
     box-shadow: none;
